# Boids-Simulation-C

./: AllegroManager.cpp  AllegroManager.h  Boid.cpp  Boid.h  BoidsManager.cpp  BoidsManager.h  CMakeLists.txt  README.md  Vectors.cpp  Vectors.h  main.cpp  main.cpp.disable  main.h
